--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <form action="upload.php" method="POST"
 enctype="multipart/form-data">
 <label for="file">Filename:</label>
-<input type="file" name="file" id="file"><br>
+<input type="file" name="file" id="file"><br><br>
+
+Debug Mode: <input type="text" value="1" name="debug" /><br><br>
+
 <input type="submit" name="submit" value="Submit">
+
 </form>
 
 </body>
